updated the example for chai v0.4.0
