# cmd/celler/docs/swagger.json
@@ -653,7 +653,7 @@
                     "default": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/chai.Error"
+                            "$ref": "#/definitions/httputil.HTTPError"
                         }
                     }
                 }
@@ -927,23 +927,6 @@
         }
     },
     "definitions": {
-        "chai.Error": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string"
-                },
-                "error_debug": {
-                    "type": "string"
-                },
-                "error_description": {
-                    "type": "string"
-                },
-                "status_code": {
-                    "type": "integer"
-                }
-            }
-        },
         "controller.Message": {
             "type": "object",
             "properties": {
